# vcell-solvers

./: .cproject  .dockerignore  .gitignore  .project  .travis.yml  Build.txt  CMakeLists.txt  Dockerfile  Dockerfile-PETSc  Makefile.linux  Makefile.linux.nativelib  Makefile.mac  Makefile.mac.fv  Makefile.mac.g5.nativelibs  Makefile.mac.nativelibs  Makefile.win32  Makefile.win32.nativelib  Makefile64.linux  MovingBoundaryDox  README.md  README_build.md  README_localSolverBuilds.md  Readme_linux.md  Readme_macos.md  Readme_windows.md  appveyor.yml  install_name_tool_macos.sh  mactoolchain.cmake.in  mingw_notes.txt  numerics.ncb  numerics.ncb.REMOVED.git-id  numerics.sln  svnversion.txt  windows_manual_build.txt
Chombo/: README  ReleaseNotes.txt  configure  configure.ac
ExpressionParser/: ASTAddNode.cpp  ASTAddNode.h  ASTAndNode.cpp  ASTAndNode.h  ASTExpression.cpp  ASTExpression.h  ASTFloatNode.cpp  ASTFloatNode.h  ASTFuncNode.cpp  ASTFuncNode.h  ASTIdNode.cpp  ASTIdNode.h  ASTInvertTermNode.cpp  ASTInvertTermNode.h  ASTMinusTermNode.cpp  ASTMinusTermNode.h  ASTMultNode.cpp  ASTMultNode.h  ASTNotNode.cpp  ASTNotNode.h  ASTOrNode.cpp  ASTOrNode.h  ASTPowerNode.cpp  ASTPowerNode.h  ASTRelationalNode.cpp  ASTRelationalNode.h  CMakeLists.txt  DivideByZeroException.cpp  DivideByZeroException.h  Exception.cpp  Exception.h  Expression.cpp  Expression.h  ExpressionBindingException.cpp  ExpressionBindingException.h  ExpressionException.cpp  ExpressionException.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionParser.vcproj  (+52 more)
FronTierLib/: CMakeLists.txt  FronTier.h  windows_math_func.h
Hy3S/: CMakeLists.txt
IDAWin/: CMakeLists.txt  IDAWin.vcproj  IDAWin.vcxproj  Makefile.Win32  Makefile.base  Makefile.linux  Makefile.linux.nativelib  Makefile.mac  Makefile.mac.fv  Makefile64.linux  OdeResultSet.cpp  OdeResultSet.h  StoppedByUserException.cpp  StoppedByUserException.h  SundialsSolverStandalone.cpp  VCellCVodeSolver.cpp  VCellCVodeSolver.h  VCellIDASolver.cpp  VCellIDASolver.h  VCellSundialsSolver.cpp  VCellSundialsSolver.h
JavaBinding/: CMakeLists.txt  JavaBinding.vcproj  JavaBinding.vcxproj  Makefile.Win32  Makefile.base  Makefile.linux  Makefile.mac  Makefile.mac.g5  Makefile.mac.nativelibs  cbit_vcell_opt_solvers_NativeMultiShootingOptSolver.cpp  cbit_vcell_opt_solvers_NativeMultiShootingOptSolver.h  cbit_vcell_opt_solvers_NativeOptSolver.cpp  cbit_vcell_opt_solvers_NativeOptSolver.h  cbit_vcell_solvers_NativeCVODESolver.cpp  cbit_vcell_solvers_NativeCVODESolver.h  cbit_vcell_solvers_NativeIDASolver.cpp  cbit_vcell_solvers_NativeIDASolver.h  org_vcell_optimization_CopasiOptimizationSolver.cpp  org_vcell_optimization_CopasiOptimizationSolver.h  org_vcell_optimization_NativeOptSolver.cpp  org_vcell_optimization_NativeOptSolver.h
MBSolver/: CMakeLists.txt  ReadMe.txt
MovingBoundary/: CMakeLists.txt  svnversion.txt
NFsim_v1.11/: BNG2.pl  CMakeLists.txt  ultrasimple.bngl  ultrasimple.xml
Optimization2/: CMakeLists.txt  Constraint.cpp  Constraint.h  ConstraintDescription.cpp  ConstraintDescription.h  ElementWeights.cpp  ElementWeights.h  ExplicitConstraintDescription.cpp  ExplicitConstraintDescription.h  ExplicitFitObjectiveFunction.cpp  ExplicitFitObjectiveFunction.h  ExplicitObjectiveFunction.cpp  ExplicitObjectiveFunction.h  Makefile.Win32  Makefile.base  MemoryManager.cpp  MemoryManager.h  MemoryUtils.h  ObjectiveFunction.h  OdeObjectiveFunction.cpp  OdeObjectiveFunction.h  OdeResultSetOpt.cpp  OdeResultSetOpt.h  OptProblemDescription.cpp  OptProblemDescription.h  OptResultSet.cpp  OptResultSet.h  OptSolver2.cpp  OptSolver2.h  OptSolver2Listener.h  OptSolverCFSQP.cpp  OptSolverCFSQP.h  OptXml.h  OptXmlReader2.cpp  OptXmlReader2.h  OptXmlWriter2.cpp  OptXmlWriter2.h  Optimization2.vcproj  Optimization2.vcxproj  ParameterDescription.cpp  (+14 more)
PCGPack/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.mac.fv  Makefile.win32  Makefile64.linux  mssccprj.scc  pc0v.f  pc0vi.f  pcaxpy.f  pcbtrc.f  pccg.f  pccgx.f  pccred.f  pcd2i.f  pcd2ii.f  pcd2it.f  pcdmv.f  pcdmva.f  pcdrv.f  pcdrvx.f  pcdslv.f  pcend.f  pcgcr.f  pcgmr.f  pcgmrx.f  pcgpack_dbl.dsp  pcgpack_dbl.lib  pcgpack_dbl.plg  pciabs.f  pciblk.f  pcic.f  pcic1.f  pcicb.f  pcicmc.f  pcicmr.f  pcicms.f  pcicpr.f  pcicpy.f  pcictr.f  (+118 more)
Solver/: .cproject  CMakeLists.txt  MovingBoundarySetup.xsd
Stochastic/: CMakeLists.txt  Stochastic.vcproj  Stochastic.vcxproj
Tests/: CMakeLists.txt  algotest.cpp  alloctest.cpp  biotest.cpp  boosttest.cpp  chronotest.cpp  clippertest.cpp  compiletest.cpp  distancetest.cpp  example_2d.cpp  exptest.cpp  fronttest.cpp  ftest.cpp  hdf5test.cpp  insidetest.cpp  logtest.cpp  meshelementnodetest.cpp  meshelementspeciestest.cpp  meshtest.cpp  mockpoint.inc  movingboundarysetuptest.cpp  numerictest.cpp  segmenttest.cpp  test1.cpp  v64.cpp  vcellpersist.cpp  vcellutil.cpp  vdemo.cpp  versiontest.cpp  vi64.cpp  voltest.cpp  worldtest.cpp
VCell/: .project  CMakeLists.txt  VCell.vcproj  VCell.vcxproj
VCellChombo/: .cproject  .project  CMakeLists.txt  Make.defs.local.cygwin  Make.defs.local.linux  Make.defs.local.osx  building_instruction.txt
VCellMessaging/: CMakeLists.txt
VCellZipUtils/: CMakeLists.txt
VCell_CodeGen/: CMakeLists.txt  VCell.vcproj  VCell_CodeGen.vcproj  VCell_CodeGen.vcxproj
activemq-cpp-library-3.4.4/: CMakeLists.txt  Makefile.in  aclocal.m4  config.hu  configure
apr-1.4.6/: CMakeLists.txt
apr-iconv-1.2.1/: CMakeLists.txt
apr-util-1.4.1/: CHANGES  CMakeLists.txt  NWGNUmakefile  build.conf  configure.in
bridgeVCellSmoldyn/: CMakeLists.txt  SimpleMesh.h  SimpleValueProvider.cpp  SimpleValueProvider.h  SmoldynDataGenerator.cpp  SmoldynHdf5Writer.cpp  SmoldynVarStatDataGenerator.cpp  SmoldynVarStatDataGenerator.h  VCellMesh.cpp  VCellSmoldynOutput.cpp  VCellSmoldynOutput.h  vcell_smoldyn.cpp  vcellcmd.cpp  vcellhybrid.cpp  vcellhybrid.h
glut-3.7.6/: CMakeLists.txt
matlab/: CMakeLists.txt  FindMatlabGerardus.txt  build32.opts  build64.opts  msvcpp110d.xml
netcdf-3.6.2/: CMakeLists.txt  Makefile.linux  Makefile.mac.fv  Makefile.win32  Makefile64.linux  (+2 more)
qhull/: io.c  (+29 more)
(+6823 files in other folders)
